# OpenGL_Practice_FULL-template

./: .gitignore  CMakeLists.txt
libs/assimp/: CMakeLists.txt
libs/assimp/cmake-modules/: Findassimp.cmake
libs/libpng/: CMakeLists.txt
src/: Figures.h  Helpers.h  ObjLoader.cpp  ObjLoader.h  PngLoader.cpp  PngLoader.h  Shaders.cpp  Shaders.h  Vertex.cpp  Vertex.h  main.cpp
